--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ html {
 }
 
 body {
-    height: 100%vh;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -17,11 +16,11 @@ body {
 }
 main {
     flex: 1;
+    position: relative;
     background-image: url("assets/landing.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    /*padding-bottom: 5rem;*/
     background-position: bottom center;
 }
 header {
@@ -42,14 +41,19 @@ nav > h1 {
 .logo {
     margin: 1rem;
 }
-.main-img {
-    /*height: ;*/
+.overlay {
+    position: absolute;
+    inset: 0;
+    background-color: black;
+    opacity: 0.29;
+    display: flex;
+    /*align-items: center;
+    justify-content: center;*/
 }
 
 footer {
     height: 5rem;
-    background-color: #f7f7f6;
-    position: fixed;
+    background-color: #decbb7;
     left: 0;
     bottom: 0;
     width: 100%;
