--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ body {
     flex-direction: column;
     height: 100vh;
 }
+
+header {
+    z-index: 3;
+}
 main {
     flex: 1;
     position: relative;
@@ -76,4 +80,75 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
+}
+
+/* Navbar container */
+/*.navbar {
+  overflow: hidden;
+  background-color: #333;
+  font-family: Arial;
+}*/
+
+/* Links inside the navbar */
+nav a {
+    float: left;
+    /*font-size: 3rem; */
+    /*color: white;*/
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* The dropdown container */
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+/* Dropdown button */
+.dropH1 {
+    /*font-size: 3rem;*/
+    border: none;
+    outline: none;
+    /*color: white;*/
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+    background-color: red;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
 }
