--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
 header {
     z-index: 3;
 }
-main {
+main.index {
     flex: 1;
     position: relative;
     background-image: url("assets/landing.jpg");
