--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,18 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    background-color: #f7f7f6;
 }
 
 header {
     z-index: 3;
 }
+
+main {
+    flex: 1;
+    position: relative;
+}
+
 main.index {
     flex: 1;
     position: relative;
@@ -108,6 +115,8 @@ nav a {
 /* Dropdown button */
 .dropH1 {
     /*font-size: 3rem;*/
+    display: inline-flex;
+    align-items: center;
     border: none;
     outline: none;
     /*color: white;*/
@@ -115,6 +124,10 @@ nav a {
     background-color: inherit;
     font-family: inherit; /* Important for vertical align on mobile phones */
     margin: 0; /* Important for vertical align on mobile phones */
+}
+
+.dropH1 i {
+    margin-left: 5px;
 }
 
 /* Add a red background color to navbar links on hover */
