--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     flex-direction: column;
     height: 100vh;
     background-color: #f7f7f6;
+    font-family: "Work Sans";
 }
 
 header {
@@ -89,6 +90,8 @@ nav > h1 {
 
 .logo {
     margin: 1rem;
+    border-radius: 10%;
+    height: 100px;
 }
 .overlay {
     position: absolute;
